pagination done somewhat
